# HsDualAppBridge

./: .gitignore  .gitmodules  readme.md
communication_bridge/: CMakeLists.txt  package.xml
communication_bridge/include/communication_bridge/: rb_ArrayAndBool.h  rb_ArrayAndBoolRequest.h  rb_ArrayAndBoolResponse.h  rb_DoubleBool.h  rb_DoubleBoolRequest.h  rb_DoubleBoolResponse.h  util_robConnUI.h
communication_bridge/src/: robConnUI.cpp  util_robConnUI.cpp
cubeParse/: CMakeLists.txt  CubeSolver.py  package.xml  svm_color.xml
cubeParse/include/: correct.h  cube_solve.h  solve.h  svmdetect.h
cubeParse/src/: color_detect.cpp  correct.cpp  cube_solve.cpp  solve.cpp  svmdetect.cpp
cubeParse/srv/: Correction.srv  TakePhoto.srv
rb/rb_srvs/: CMakeLists.txt  package.xml
rb/rb_ui/: CMakeLists.txt  package.xml
rb/rb_ui/src/: rb_ui.cpp
rb/rb_ui/src/utils/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  logClass.cpp  logClass.h
rb_msg/devel/include/rb_msg/: rbImageList.h
rb_msg/src/rb_msg/: CMakeLists.txt  package.xml
rb_msgAndSrv/: CMakeLists.txt  package.xml
rb_msgAndSrv/srv/: rb_ArrayAndBool.srv  rb_string.srv
rb_ui/: CMakeLists.txt  package.xml
rb_ui/include/log4cplus/: globalvar.h  log4fun.h  log4qtfun.h  logbase.h  logmanager.h  messagehandler.h
rb_ui/include/rb_ui/: MainWindow.h  SetEnableSrv.h  SetEnableSrvRequest.h  SetEnableSrvResponse.h  rb_ArrayAndBoolRequest.h  rb_ArrayAndBoolResponse.h  rb_DoubleBoolRequest.h  rb_DoubleBoolResponse.h  rb_ImageArray.h  rb_ImageArrayRequest.h  rb_ImageArrayResponse.h  robotConn.h  robotConnRequest.h  robotConnResponse.h  robotError.h  robotErrorRequest.h  robotErrorResponse.h
rb_ui/include/rbmsg/: rb_ArrayAndBool.h  rb_DoubleBool.h  robotConn.h  robotConnRequest.h  robotConnResponse.h  robotError.h  robotErrorRequest.h  robotErrorResponse.h
rb_ui/src/: fortest.cpp  rb_ui.cpp
rb_ui/src/utils/: MainWindow.cpp
rb_ui/srv/: SetEnableSrv.srv  rb_DoubleBool.srv  rb_ImageArray.srv
rbconnui_bridge/: CMakeLists.txt  package.xml
rbconnui_bridge/include/rbconnui_bridge/: rb_ArrayAndBool.h  rb_ArrayAndBoolRequest.h  rb_ArrayAndBoolResponse.h  rb_DoubleBool.h  rb_DoubleBoolRequest.h  rb_DoubleBoolResponse.h  util_robConnUI.h
rbconnui_bridge/src/: robConnUI.cpp  util_robConnUI.cpp
rbconnui_bridge/srv/: rb_ArrayAndBool.srv
